--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "air" # Currently available options are "default", "air"
+site_theme               : "default" # Currently available options are "default", "air"
 title                    : "Home"
 title_separator          : "-"
 name                     : &name "Your Name"
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Amanda Lin"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PhD Candidate"
   location         : #"Earth"
   employer         : "Caltech"
   uri              : # URL
