--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile-photo.png"
   name             : "Amanda Lin"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Candidate"
+  bio              : "PhD Student"
   location         : #"Earth"
   employer         : "Caltech"
   uri              : # URL
